Update Vietnamese translation for dark mode label
Changed the 'darkMode' label in the Vietnamese locale from 'Chế độ tối' to 'Chế độ' for improved clarity or consistency.

--- a/src/lib/i18n/locales/vi.json
+++ b/src/lib/i18n/locales/vi.json
@@ -52,7 +52,7 @@
       "changePasswordDesc": "Cập nhật mật khẩu của bạn",
       "language": "Ngôn ngữ",
       "languageCurrent": "Hiện tại: {{language}}",
-      "darkMode": "Chế độ tối",
+      "darkMode": "Chế độ",
       "darkModeOn": "Giao diện tối đang bật",
       "darkModeOff": "Giao diện sáng đang bật",
       "privatePosts": "Bài viết ở chế độ riêng tư",
